Bug 1576600 - Ensure Learn More link is visible in dark mode. r=andreio
Differential Revision: https://phabricator.services.mozilla.com/D47617

UltraBlame original commit: 991d6d6efcca9457ada2c8b5b53e8e59f06fc137

--- a/browser/themes/shared/customizableui/panelUI.inc.css
+++ b/browser/themes/shared/customizableui/panelUI.inc.css
@@ -14278,6 +14278,22 @@ message
 text
 -
 link
+{
+color
+:
+white
+;
+}
+#
+protections
+-
+popup
+-
+message
+.
+text
+-
+link
 :
 hover
 {
